# linux_bite_learn

./: README.md
linux01/: CMakeLists.txt  main.cpp
linux02/: CMakeLists.txt  main.c
linux03/: main.c
linux04/: main.c
linux05/: main.c
linux06/: main.c
linux07/: main.c  获取环境变量
linux08/: main.c
linux09/: main.c
linux10/: child  main.c  test  test.c
linux11/: main.c
linux12/: CMakeLists.txt  log.txt  main.c  test03.txt
linux13/: main.c
